email validation working without additional package

--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "homepage": "https://github.com/allisonnault/Social-Network-API#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^6.9.2",
-    "validator": "^13.9.0"
+    "mongoose": "^6.9.2"
   }
 }
